--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="lib" path="C:/javalibs/commons-csv-1.6/commons-csv-1.6.jar"/>
 	<classpathentry kind="lib" path="C:/javalibs/commons-csv-1.6/commons-csv-1.6-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Stijn/Desktop/docs/Java libs/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stijn/Desktop/docs/Java libs/fxgraphics2d-1.8-snapshot.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stijn/Desktop/docs/Java libs/orsoncharts-1.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stijn/Desktop/docs/Java libs/orson-charts-fx-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
