--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/javalibs/commons-csv-1.6/commons-csv-1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Stijn/Desktop/docs/Java libs/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="E:/javalibs/commons-csv-1.6/commons-csv-1.6.jar"/>
+	<classpathentry kind="lib" path="E:/Users/Stijn/Desktop/docs/Java libs/gson-2.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
